--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(TANK_ATTACK main.cpp
             Graph.cpp
-            Graph.h)
+            Graph.h
+        Graph.cpp)
