Commit agregando lo que tiene GBB, además de una carpeta con las fotos usadas. Hay un error con la primera imagen de fondo, a la hora de cambiar entre fondos se soluciona

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Charts)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Charts)
 
 set(PROJECT_SOURCES
+        Graph.cpp
+        Graph.h
         ventana3.cpp
         ventana3.h
         main.cpp
